@@ -30,6 +30,15 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4960: Split followed by order by/skewed join is skewed in Tez (rohini)
+
+PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results in
+  empty maps for the pure wildcarded column families (daijy)
+
+PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)
+
+PIG-4942: Fix mvn-install ant target (petersla via daijy)
+
 PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)
 
 PIG-4950: Fix minor issues with running scripts in non-local FileSystems (petersla via daijy)
